--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section id="highlights" class="wrapper">
             <div class="inner alt">
                 <section class="spotlight">
-                    <div class="image"><img src="images/pic01.jpg" alt="Newborn Baby Blankets" class="short-image"></div>
+                    <div class="image"><img src="pic01.jpg" alt="Newborn Baby Blankets" class="short-image"></div>
 
                     <div class="content">
                         <h3>Newborn Baby Blankets</h3>
@@ -68,14 +68,14 @@
                     </div>
                 </section>
                 <section class="spotlight">
-                    <div class="image"><img src="images/pic02.jpg" alt="Fluffy and Flannel Blankets"></div>
+                    <div class="image"><img src="pic02.jpg" alt="Fluffy and Flannel Blankets"></div>
                     <div class="content">
                         <h3>Fluffy and Flannel</h3>
                         <p>Dive into the embrace of our fluffy blankets, where every fiber is a whisper of warmth, turning your home into a sanctuary of snuggly bliss.</p>
                     </div>
                 </section>
                 <section class="spotlight">
-                    <div class="image"><img src="images/pic03.jpg" alt="Fleece Blankets"></div>
+                    <div class="image"><img src="pic03.jpg" alt="Fleece Blankets"></div>
                     <div class="content">
                         <h3>Fleece Blankets</h3>
                         <p>Nestle into the cloud-like caress of our fluffy blankets, a luxurious haven of comfort that transforms every nook into a cradle of coziness.</p>
